--- a/Week2/ex3_GuessGame/app/src/main/res/values/strings.xml
+++ b/Week2/ex3_GuessGame/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ex3_GuessGame</string>
+    <string name="guess_a_letter_a_z">Guess a letter (a–z)</string>
+    <string name="enter">Enter</string>
+    <string name="guess">Guess</string>
+    <string name="reset">Reset</string>
 </resources>
